--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Women Make Some Noise: Take Charge and Defend Yourself!
-permalink: /index/
+title: Women Make Some Noise
+
 ---
 Self Defense and Safety Instruction for Women
 
